# kubectl-diagnostics

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: args.rs  diagnostic.rs  events_diagnostic.rs  main.rs  nodes_diagnostic.rs  pods_diagnostics.rs  services_diagnostics.rs
src/diagnostics/: diagnostic.rs  diagnostic_report.rs  events_diagnostic.rs  mod.rs  nodes_diagnostic.rs  output_mode.rs  pods_diagnostics.rs  services_diagnostics.rs
