[package]
name = "kubectl-diagnostics"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "rt", "macros"] }
colored = "3.0.0"
clap = { version = "4.5.49", features = ["derive"] }
chrono = "0.4.42"